# WAFL2026

./: .gitignore  README.md  setup.py  tf2_pose_transformer.py
Integration/: wafl_manual_dashboard.py
Localization/Hardware/encoder_odometry/: package.xml  setup.py
Localization/Hardware/encoder_odometry/encoder_odometry/: encoder_velocity_node.py
Localization/Hardware/hardware_wafl2026/: package.xml  setup.cfg  setup.py
Localization/Hardware/hardware_wafl2026/config/: amcl_config.yaml  ekf.yaml
Localization/Hardware/hardware_wafl2026/hardware_wafl2026/: odom_covariance_fix.py  pose_persistence_node.py
Localization/Hardware/hardware_wafl2026/launch/: bringup_all.launch.py  laptop_b_localization.launch.py
Localization/Hardware/hardware_wafl2026/urdf/: wafl2025.urdf  wafl2025old.urdf
Localization/Hardware/phone_imu/: package.xml  setup.cfg  setup.py
Localization/Hardware/phone_imu/phone_imu/: imu_udp_node.py
Localization/Hardware/robot_odometry/: package.xml  setup.py
Localization/Hardware/robot_odometry/launch/: robot_hardware.launch.py
Localization/Hardware/robot_odometry/robot_odometry/: odom_fusion_node.py  odom_fusion_node1.py
Localization/Simulation/: Readme.md
Localization/Simulation/src/vision_model/: package.xml  setup.cfg  setup.py
Localization/Simulation/src/vision_model/vision_model/: live_test.py
Localization/Simulation/src/wafl2026/: package.xml  setup.cfg  setup.py
Localization/Simulation/src/wafl2026/config/: Tab_ekf.yaml  amcl_config.yaml  ekf (copy).yaml  ekf.yaml  ekf_old.yaml
Localization/Simulation/src/wafl2026/launch/: display.launch.py  gazebo.launch.py  gazebo_humble.launch.py  humble.launch.py  humble2.launch.py  humble3.launch.py  humble4.launch (another copy).py  humble4.launch (copy).py  humble4.launch.py  view_urdf.launch.py
Low level/Arduino Codes/Driving/: Driving.ino  Driving_uROS.ino
Low level/Arduino Codes/Lifting/: Lifting.ino
Low level/Arduino Codes/Lifting&Aux/: Lifting_aux_uROS.ino  code.ino
Low level/Arduino Codes/Lights/: Lights.ino
Low level/Arduino Codes/Steering/: Caster_only_uros.ino  steering_all_uROS.ino
Low level/Arduino Codes/Swivel "Stepper"/: swivel_stepper.ino
Low level/Arduino Codes/Swivel _Stepper_/: swivel_stepper.ino
Low level/Arduino Codes/caster_steering/: caster_steering.ino
Navigation/Simulation/: How_to_run (Marina).txt  Running Instructions.md
Navigation/Simulation/wafl_navigation/: package.xml  setup.cfg  setup.py
Navigation/Simulation/wafl_navigation/config/: nav2_params.yaml
Navigation/Simulation/wafl_navigation/launch/: navigation.launch.py
Navigation/Simulation/wafl_navigation/maps/: my_map.pgm  my_map.yaml
Navigation/Simulation/wafl_navigation/wafl_navigation/: caster_controller.py
Perception/: package.xml  pallet_pose_keypoints.py  setup.cfg  setup.py
Perception/launch/: aruco.launch.py  pallet_vision.launch.py  yolo.launch.py
Perception/models/: Important_Info.txt
Perception/pallet_vision/: pallet_front_angle_node.py  pallet_navigator.py  pallet_pose_node.py
launch/: pallet_vision.launch.py
pallet_vision/: pallet_pose_node.py  pallet_vision.launch.py
(+3 files in other folders)
